--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 	},
 	"dependencies": {
 		"cors": "^2.8.0",
-		"express": "^4.18.1"
+		"express": "^4.18.1",
+		"vercel": "^25.0.0"
 	},
 	"repository": {
 		"type": "git",
